# blue

./: CMakeLists.txt  README.md  qml.qrc
.github/workflows/: build-apk.yml
android/: AndroidManifest.xml
qml/: BluetoothPanel.qml  DPadButton.qml  DirectionPad.qml  HeatmapDisplay.qml  SpeedControl.qml  main.qml
src/: bluetoothcontroller.cpp  bluetoothcontroller.h  heatmapimageprovider.cpp  heatmapimageprovider.h  main.cpp
